--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@mdxeditor/editor": "^3.14.0",
     "@worksolutions/utils": "~1.3.26",
     "antd": "^5.20.6",
     "antd-img-crop": "^4.23.0",
